adjust publication page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,3 +74,36 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@inproceedings{li2019surrogate,
+  title={Surrogate modeling for sensitivity analysis of models with high-dimensional outputs},
+  author={Li, Min and Jia, Gaofeng and Wang, Ruo Qian},
+  booktitle={13 th International Conference on Applications o f Statistics and Probability in Civil Engineering, ICASP13, Seoul, South Korea},
+  pages={26--30},
+  year={2019}
+}
+
+@inproceedings{li2021dimension,
+  title={Dimension reduction and surrogate based approach for optimal seismic risk mitigation of large-scale transportation network},
+  author={Li, M and Wang, Z and Jia, G},
+  booktitle={Bridge Maintenance, Safety, Management, Life-Cycle Sustainability and Innovations},
+  pages={2774--2780},
+  year={2021},
+  publisher={CRC Press}
+}
+
+@inproceedings{li2021age,
+  title={Age, state, and environment dependent non-homogeneous stochastic model for improved bridge deterioration prediction},
+  author={Li, M and Jia, G},
+  booktitle={Bridge Maintenance, Safety, Management, Life-Cycle Sustainability and Innovations},
+  pages={2766--2773},
+  year={2021},
+  publisher={CRC Press}
+}
+
+@inproceedings{osti_10379395,
+title = {Multi-fidelity surrogate model for efficient tsunami evacuation risk assessment}, booktitle = {ICOSSAR 2021-2022: 13th International Conference on Structural Safety & Reliability}, author = {Li, M. and Wang, Z. and Jia, G.}, }
+
+@inproceedings{osti_10379394,
+title = {Convolution-fed Gaussian Process with Active Learning for Probabilistic Power Prediction of Large-scale Wave Farm}, booktitle = {ICOSSAR 2021-2022: 13th International Conference on Structural Safety & Reliability}, author = {Li, M. and Jia, G. and Mahmoud, H. and Yu, Y.-H. and Tom, N.}, }
+
