--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -102,8 +102,16 @@
 }
 
 @inproceedings{osti_10379395,
-title = {Multi-fidelity surrogate model for efficient tsunami evacuation risk assessment}, booktitle = {ICOSSAR 2021-2022: 13th International Conference on Structural Safety & Reliability}, author = {Li, M. and Wang, Z. and Jia, G.}, }
+  title = {Multi-fidelity surrogate model for efficient tsunami evacuation risk assessment}, 
+  booktitle = {ICOSSAR 2021-2022: 13th International Conference on Structural Safety & Reliability}, 
+  author = {Li, M. and Wang, Z. and Jia, G.}, 
+  year = {2022}
+}
 
 @inproceedings{osti_10379394,
-title = {Convolution-fed Gaussian Process with Active Learning for Probabilistic Power Prediction of Large-scale Wave Farm}, booktitle = {ICOSSAR 2021-2022: 13th International Conference on Structural Safety & Reliability}, author = {Li, M. and Jia, G. and Mahmoud, H. and Yu, Y.-H. and Tom, N.}, }
+  title = {Convolution-fed Gaussian Process with Active Learning for Probabilistic Power Prediction of Large-scale Wave Farm}, 
+  booktitle = {ICOSSAR 2021-2022: 13th International Conference on Structural Safety & Reliability}, 
+  author = {Li, M. and Jia, G. and Mahmoud, H. and Yu, Y.-H. and Tom, N.}, 
+  year = {2022}
+}
 
