--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,6 +75,16 @@
   publisher={Elsevier}
 }
 
+@article{li2024multi,
+  title={A multi-fidelity stochastic simulation scheme for estimation of small failure probabilities},
+  author={Li, Min and Arunachalam, Srinivasan and Spence, Seymour MJ},
+  journal={Structural Safety},
+  volume={106},
+  pages={102397},
+  year={2024},
+  publisher={Elsevier}
+}
+
 @inproceedings{li2019surrogate,
   title={Surrogate modeling for sensitivity analysis of models with high-dimensional outputs},
   author={Li, Min and Jia, Gaofeng and Wang, Ruo Qian},
