--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,13 @@
 
 @string{aps = {American Physical Society,}}
 
+@phdthesis{li2021surrogate,
+  title={Surrogate Modeling for Efficient Analysis and Design of Engineering Systems},
+  author={Li, Min},
+  year={2021},
+  school={Colorado State University}
+}
+
 @article{li2019dimension,
   title={Dimension reduction and surrogate based topology optimization of periodic structures},
   author={Li, Min and Cheng, Zhibao and Jia, Gaofeng and Shi, Zhifei},
@@ -123,5 +130,12 @@
   booktitle = {ICOSSAR 2021-2022: 13th International Conference on Structural Safety & Reliability}, 
   author = {Li, M. and Jia, G. and Mahmoud, H. and Yu, Y.-H. and Tom, N.}, 
   year = {2022}
+}
+
+@inproceedings{li2023multi,
+  title={Multi-fidelity Information Fusion for Efficient Estimation of Small Failure Probabilities Considering Multiple Limit States},
+  author={Li, Min and Arunachalam, Srinivasan and Spence, Seymour M},
+  booktitle={14th International Conference on Applications of Statistics and Probability in Civil Engineering (ICASP14)},
+  year={2023}
 }
 
